# django-app-autopilot

./: .pre-commit-config.yaml  db.sqlite3  pyproject.toml
.github/workflows/: automated-testing-workflow.yaml
config/: settings.py  urls.py
posts/: models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py
